# test_ocaml_bot_telegram

./: README.md  dune-project  telegram_bot.opam
bot_client/: dune  telegram_bot_client.ml  telegram_bot_client.mli  telegram_bot_client_request.ml  telegram_bot_client_response.ml  telegram_bot_updates_store.ml  telegram_bot_updates_store.mli
check_url/: dune  telegram_bot_check_url.ml  telegram_bot_check_url.mli  telegram_bot_check_url_response.ml  telegram_bot_url_status_store.ml  telegram_bot_url_status_store.mli
daemons/: dune  telegram_bot_chats_store.ml  telegram_bot_check_urls_daemon.ml  telegram_bot_check_urls_daemon.mli  telegram_bot_updates_daemon.ml  telegram_bot_updates_daemon.mli
lib/: dune  telegram_bot_client.ml  telegram_bot_client.mli  telegram_bot_client_response.ml  telegram_bot_updates_store.ml  telegram_bot_updates_store.mli
test/: dune
